# Materials-Research

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  project_proposal.md  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements-full.txt  requirements.txt  ruff.toml  setup.py  task.md
atlas/: __init__.py  config.py  console_style.py
data/: README.md
docs/: ARCHITECTURE_NAMING.md  DATA_GOVERNANCE.md  INTERNAL_HANDOFF_CHECKLIST_PHASE1_4.md  LEARNING_ROADMAP.md  OPTIMIZATION_REPORT_2026-03-04.md  PERFORMANCE_ANALYSIS.md  PHASE1_TO_PHASE4_TRAINING_RUNBOOK.md  PROJECT_STATUS.md  REPO_HYGIENE_REPORT.md  REPRODUCIBILITY.md  RESEARCH_DIRECTION.md  ROADMAP_ACADEMIC.md  ROADMAP_PROJECT.md  THEORY_BACKED_TUNING.md  TODO.md  YEAR1_AUDIT_PLAN.md  algorithm_evaluation.md  todolist_temp copy.md  todolist_temp.md  todolist_temp_81_112_backup.md
models/: cgcnn_full_summary.json
new/: .txt  00_master_plan.md  01_phase1_fix.md  02_phase_A_Feb_Apr.md  03_phase_B_Apr_Jun.md  04_phase_C_Jun_Aug.md  05_phase_D_Aug_Dec.md  06_reading_list.md  07_weekly_checklist.md  08_phase2_analysis.md  project.json
scripts/: 01_download_data.py  02_init_topo_db.py  03_prepare_mace_data.py  04_train_mace.py  05_train_topo_classifier.py  06_run_discovery.py  07_search_materials.py  08_alloy_properties.py  09_phase_diagram.py  10_train_cgcnn_baseline.py  11_train_cgcnn_full.py  12_train_multitask_cgcnn.py  13_train_multitask_cgcnn_phase1.py  20_train_equivariant.py  21_train_multitask.py  30_explainability_analysis.py  31_active_learning.py  (+5 more)
(+305 files in other folders)
