[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "ATLAS: Accelerated Topological Learning And Screening"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ATLAS Team"}
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pymatgen>=2024.1.1",
    "ase>=3.22.0",
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "jarvis-tools>=2024.1.25",
    "tqdm>=4.65",
    "joblib>=1.3.0",
    "e3nn>=0.5.0",
    "botorch>=0.9.0",
    "gpytorch>=1.11.0",
]

[project.optional-dependencies]
mace = ["mace-torch>=0.3.0"]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mock>=5.1.0",
]
jupyter = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]
benchmark = [
    "matbench>=0.6",
    "matminer>=0.9",
]

[project.scripts]
benchmark = "scripts.benchmark.run_matbench_task:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]
exclude = ["scripts*", "tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
